# llm-eval-platform

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
src/: config.py  main.py  settings.py
src/core/: criteria.py  data_loader.py  message_utils.py  pipeline.py  prompts.py
src/core/evaluators/: base.py  deepeval_evaluator.py  ragas_evaluator.py
src/core/judge/: factory.py  model.py  utils.py
src/core/langfuse/: exporter.py  fetcher.py
src/ui/: app.py  helpers.py  runner.py  streamlit_app.py
src/ui/tabs/: compare.py  import_tab.py  langfuse_export.py  results.py  run.py
